--- a/assignment 3/assignment 3CSS.css
+++ b/assignment 3/assignment 3CSS.css
@@ -36,3 +36,20 @@ a:hover {
 #divexample {
     background-color: darkseagreen;
 }
+ .spanstyle { color: rgb(243, 7, 7)
+    
+    ;
+background-color: rgb(244, 237, 237);}
+
+header{ 
+    color: darkviolet;
+    background-color: antiquewhite;
+}
+main{ color: #c8d594;
+background-color: aquamarine;
+}
+nav{
+    color: lightblue;
+    background-color: lightgray;
+}
+
