--- a/assignment 3CSS.css
+++ b/assignment 3CSS.css
@@ -33,3 +33,23 @@ a:hover {
     color: rgb(232, 255, 24);
     text-decoration: underline;
 }
+#divexample {
+    background-color: darkseagreen;
+}
+ .spanstyle { color: rgb(243, 7, 7)
+    
+    ;
+background-color: rgb(244, 237, 237);}
+
+header{ 
+    color: darkviolet;
+    background-color: antiquewhite;
+}
+main{ color: #c8d594;
+background-color: aquamarine;
+}
+nav{
+    color: lightblue;
+    background-color: lightgray;
+}
+
