--- a/mockupCSS.css
+++ b/mockupCSS.css
@@ -57,10 +57,10 @@ nav {
   }
   
   .content {
-    height: 200px;
+    
   text-align: center;
   margin-left: 215px;
-  margin-right: 215px;} 
+  margin-right: 0px;} 
   header {
     background-color: #333;
     color: #fff;
@@ -114,15 +114,15 @@ nav {
   footer {
     background-color: #333;
     color: #fff;
-    padding: 50px;
+    padding: 10px;
     margin-left: 100px;
     text-align: center;
   }
   
   footer p {
-    margin: 100px;
+    margin: 50px;
     text-align: center;
-    margin-left: 100px;
+    margin-left: 50px;
   
   }
   .video {
@@ -133,3 +133,31 @@ nav {
   }
   
   h1 { font-family: 'Chivo_Mono', cursive; }
+  #myCarousel {
+    margin-bottom: 24px;
+  }
+  
+  #myCarousel .f-carousel__slide {
+    text-align: center;
+    padding: 24px;
+    background: #eee;
+    height: 600px;
+    width: 800px;
+  }
+  .columns {
+    display: flex;
+  }
+  
+  .column {
+    flex: 1;
+    margin: 0 10px;
+    text-align: center;
+  }
+  
+  .circle {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+  }
+  
