--- a/Assignment10/mockupCSS.css
+++ b/Assignment10/mockupCSS.css
@@ -133,7 +133,7 @@ nav {
     object-fit: cover;
   }
   
-  h1 { font-family: 'Chivo_Mono', cursive; }
+  h1 { font-family:monospace }
   #myCarousel {
     margin-bottom: 24px;
   }
@@ -152,19 +152,81 @@ nav {
   .columns {
     display: flex;
     margin-top: 20px;
-    margin-left: 200px;
+    margin-left: 15px;
+    margin-right: 500px;
+    
+
   }
   
   .column {
     flex: 1;
-    margin: 0px;
+    margin: 20px;
     text-align: center;
   }
   
   .circle {
-    width: 300px;
-    height: 300px;
+    width: 10px;
+    height: 10px;
     border-radius: 50%;
     margin-bottom: 10px;
+   
+  }
+  .column img{
+    width:350px;
+    height: 300px;
+    
   }
   
+  .mes {
+    display: flex;
+    margin-top: 20px;
+    margin-left: 200px;
+    margin-right: 80px;
+    
+
+  }
+  .me {
+    flex: 1;
+    margin: 0px;
+    text-align: center;
+  }
+  .me img{
+    width:300px;
+    height: 300px;
+  }
+
+  body {
+    background-image: url("Fields43-UnchartedTerritories.jpg");
+    background-size: cover;
+  }
+  h3{
+    font-family: 'Chivo_Mono', cursive; 
+    margin-bottom: 24px;
+    text-size-adjust: 20px;
+    margin-left: 200px;
+  }
+  .gif {
+    margin-left: 180px;
+  }
+  .gif img{
+    width: 500px;
+    height: 400px;
+  }
+  .instagram {
+    margin-left: 200px;
+    border-radius: 50%;
+    display: flex;
+    
+  }
+  iframe{
+    margin-left: 400px;
+  }
+  h3{
+    text-align: center;
+    background-color: rgb(210, 210, 210);
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    margin-right: 50px;
+    border-width: 10px;
+    border-style: groove;
+    border-radius: 5%;
+  }
